--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -17,6 +17,7 @@
         <div class="col-lg-8  offset-lg-2">
             <h3 class="mt-5">Social Distancing Detection</h3>
             <img src="{{ url_for('video_feed') }}" width="100%">
+<!--            <iframe frameborder="0" noresize="noresize" width="100%" height="100%" src="{{ url_for('video_feed') }}"></iframe>-->
         </div>
     </div>
 </div>
