--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,12 @@
       border: none;
   }
 
+  .cardColor{
+    background-color: #d1335a !important;
+     text-align: center;
+     color: #FFFFFF !important;
+  }
+
 
   .cross_button{
       border: none;
@@ -37,5 +43,9 @@
   }
   .image_style{
       width: 50px;
-      height: 40px;
+      height: 30px;
   }
+
+.MuiPaper-elevation1 {
+    box-shadow: 0px 2px 36px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%) !important
+}
