--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,3 +49,6 @@
 .MuiPaper-elevation1 {
     box-shadow: 0px 2px 36px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%) !important
 }
+
+.row{margin-right: calc(var(--bs-gutter-x)/ 0) !important
+}
